GPU Subdivision: "Show Wire" overlay glitch in vertex paint and weight paint #98913

Closed
opened 2022-06-16 00:03:16 +02:00 by Daniel Salazar · 9 comments
Member

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-14 20:24, hash: 04a75c90d5

Short description of error
When OGL Subdivision is enabled the weight paint wireframe overlay is glitchy
image.png

Exact steps for others to reproduce the error

Make sure GPU Subdivision is enabled in the preferences
Open the blend file
Weight Wire.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-14 20:24, hash: `04a75c90d5` **Short description of error** When OGL Subdivision is enabled the weight paint wireframe overlay is glitchy ![image.png](https://archive.blender.org/developer/F13171005/image.png) **Exact steps for others to reproduce the error** Make sure GPU Subdivision is enabled in the preferences Open the blend file [Weight Wire.blend](https://archive.blender.org/developer/F13171010/Weight_Wire.blend)
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @PratikPB2123, @kevindietrich

Added subscribers: @PratikPB2123, @kevindietrich
Pratik Borhade changed title from Weight paint wireframe overlay glitch with OGL Subdivision to GPU Subdivision: Weight paint wireframe overlay glitch 2022-06-16 06:27:49 +02:00
Member

So this has not been fixed yet: #96356#1321743

So this has not been fixed yet: #96356#1321743
Philipp Oeser changed title from GPU Subdivision: Weight paint wireframe overlay glitch to GPU Subdivision: "Show Wire" overlay glitch in vertex paint and weight paint 2022-06-16 11:19:42 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Will raise prio here, @kevindietrich : can you check?

Will raise prio here, @kevindietrich : can you check?

This issue was referenced by 72b8f607e7

This issue was referenced by 72b8f607e77f674b5918f0526f55c4cb07c941eb

This issue was referenced by b73a52302e

This issue was referenced by b73a52302edcd99f086fc26fc62a8ed4db29d562

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-06-20 12:14:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98913
No description provided.