Fix T98913: GPU Subdivision: "Show Wire" overlay glitch

Issue is caused by an off by one error which would map some edge loops to
the loops of some the next polygon in the list of polygon, which may not
be a topological neighbor.